# reduceq

./: .gitignore  .travis.yml  README.md  reduceq.cabal  stack.yaml
app/: Main.hs
examples/: wordcount  wordcount_imperative  wordcount_mapreduce
src/Reduceq/: AST.hs  Coq.hs  CoqAST.hs  Imp.hs  Parser.hs  Prelude.hs  Pretty.hs  PrettyCoq.hs  Transform.hs
src/Reduceq/Coq/: AST.hs  Diff.hs  Pretty.hs  PrettyCoq.hs  Proof.hs  Typing.hs
src/Reduceq/CoqAST/: Typing.hs
src/Reduceq/Imp/: AST.hs  Parser.hs
test/: Spec.hs
test/Reduceq/: TransformSpec.hs
test/Reduceq/Coq/: ProofSpec.hs  TypingSpec.hs
test/Reduceq/CoqAST/: TypingSpec.hs
test/Reduceq/Imp/: ParserSpec.hs
test/Reduceq/Spec/: Util.hs
test/data/proofspec/: prove  prove_single
test/data/proofspec/prove_steps/kmeans/: input
test/data/proofspec/prove_steps/pagerank/: input
test/data/proofspec/prove_steps/wordcount/: output
