name:                reduceq
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cocreature/reduceq#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          value
copyright:           (C) 2016 Moritz Kiefer
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reduceq.AST
                       Reduceq.CoqAST
                       Reduceq.Parser
                       Reduceq.Prelude
                       Reduceq.Pretty
                       Reduceq.Transform
  build-depends:       ansi-wl-pprint
                     , base >= 4.9 && < 5
                     , containers
                     , lens
                     , parsers
                     , protolude
                     , reducers
                     , text
                     , trifecta
                     , unordered-containers
                     , wl-pprint
  default-language:    Haskell2010
  default-extensions:  DeriveDataTypeable, NoImplicitPrelude, OverloadedStrings, TypeApplications
  ghc-options:         -Wall

executable reduceq-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lens
                     , optparse-applicative
                     , reduceq
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude, OverloadedStrings, TypeApplications

test-suite reduceq-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , lens
                     , reduceq
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude, OverloadedStrings, TypeApplications

source-repository head
  type:     git
  location: https://github.com/cocreature/reduceq
