name:                reduceq
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cocreature/reduceq#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          value
copyright:           (C) 2016 Moritz Kiefer
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     test/data/proofspec/prove_single
                     test/data/proofspec/prove
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reduceq.Coq
                       Reduceq.Coq.AST
                       Reduceq.Coq.Pretty
                       Reduceq.Coq.Proof
                       Reduceq.Coq.Typing
                       Reduceq.Imp
                       Reduceq.Imp.AST
                       Reduceq.Imp.Parser
                       Reduceq.Prelude
                       Reduceq.Transform
  build-depends:       ansi-wl-pprint
                     , base >= 4.9 && < 5
                     , containers >= 0.5.10
                     , lens
                     , mtl
                     , parsers
                     , protolude
                     , reducers
                     , text
                     , trifecta
                     , unordered-containers
                     , prettyprinter >= 1.1
                     , prettyprinter-ansi-terminal >= 1.1
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveTraversable
                     , GeneralizedNewtypeDeriving
                     , NamedFieldPuns
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , TypeApplications
  ghc-options:         -Wall

executable reduceq
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lens
                     , optparse-applicative
                     , reduceq
                     , prettyprinter
                     , prettyprinter-ansi-terminal
  default-language:    Haskell2010
  default-extensions:  NamedFieldPuns
                     , NoImplicitPrelude
                     , OverloadedStrings
                     , ScopedTypeVariables
                     , TypeApplications

test-suite reduceq-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Reduceq.Coq.ProofSpec
                       Reduceq.Coq.TypingSpec
                       Reduceq.Imp.ParserSpec
                       Reduceq.TransformSpec
                       Reduceq.Spec.Util
  build-depends:       base
                     , foldl
                     , hspec
                     , lens
                     , pipes
                     , pipes-group
                     , pipes-parse
                     , pipes-text
                     , reduceq
                     , split
                     , text
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude, OverloadedStrings, TypeApplications

source-repository head
  type:     git
  location: https://github.com/cocreature/reduceq
